# vk-zero

./: .clang-format  .gitignore  CMakeBuild.cmake  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt  lib.cpp  lib.h  lib.spv  main.cpp
